--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  animated_text_kit: ^4.1.1
+  firebase_core: ^1.0.2
+  firebase_auth: ^1.0.1
+  cloud_firestore: ^1.0.3
+  flutter_spinkit: ^4.1.2
 
 dev_dependencies:
   flutter_test:
