--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_auth: ^1.0.1
   cloud_firestore: ^1.0.3
   flutter_spinkit: ^4.1.2
+  flutter_awesome_alert_box: ^1.0.1
 
 dev_dependencies:
   flutter_test:
