--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cloud_firestore: ^1.0.3
   flutter_spinkit: ^4.1.2
   flutter_awesome_alert_box: ^1.0.1
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
