--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_spinkit: ^4.1.2
   flutter_awesome_alert_box: ^1.0.1
   modal_progress_hud: ^0.1.3
+  bubble: ^1.2.1
 
 dev_dependencies:
   flutter_test:
